--- a/K8s_Assignment/k8s_part2.yaml
+++ b/K8s_Assignment/k8s_part2.yaml
@@ -15,7 +15,7 @@ spec:
     metadata:
       creationTimestamp: null
       labels:
-        app: csvserver
+       app: csvserver
     spec:
       initContainers:
       - name: geninputfile
@@ -34,15 +34,16 @@ spec:
         - containerPort: 9300
         volumeMounts:
         - name: geninputfilevol
-          mountPath: "/csvserver"
+          mountPath: "/csvserver/inputdata"
+          subPath: inputdata
       volumes:
       - name: geninputfilevol
-        emptyDir: {}
+        hostPath:
+          path: "/localdir" 
       - name: genscript
         configMap:
           name: genscript-cm
           defaultMode: 0777
-      
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -83,7 +84,6 @@ spec:
       - name: promconfigmapvol
         configMap:
          name: prom-config
-
 ---
 #kubectl expose deployment csvserver --port=9393 --target-port=9300 --type=NodePort --dry-run=client -o yaml
 apiVersion: v1
@@ -175,5 +175,30 @@ kind: ConfigMap
 metadata:
   name: prom-config
   namespace: default
-
-
+apiVersion: v1
+data:
+  prometheus.yaml: |
+    scrape_configs:
+    - job_name: csvserver
+      scrape_interval: 5s
+      metrics_path: /metrics
+      static_configs:
+      - targets:
+        - csvserver:9300
+kind: ConfigMap
+metadata:
+  creationTimestamp: "2022-08-07T16:18:57Z"
+  name: prom-config
+  namespace: default
+  resourceVersion: "28383"
+  uid: a9b2e663-9091-4917-977b-1c39a6efdaf8
+---
+apiVersion: v1
+data:
+  gencsv_p2.sh: "#!/bin/bash\n\n\nif [ $# -lt 1 ];\nthen\t\n   Seq=10\nelse\n   Seq=$1\nfi\n\nrm
+    -rf inputdata\ntouch inputdata\n\nfor i in `seq $Seq`\ndo \n  echo \"$i,$RANDOM\"
+    >> /workdir/inputdata\ndone \n\n#chmod 777 inputdata\n\n#sleep 1000\n\n"
+kind: ConfigMap
+metadata:
+  name: genscript-cm
+  
